--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- 添加log4j支持，JFINAL的日志打印有依赖 -->
+	    <dependency>
+	    	<groupId>log4j</groupId>
+	    	<artifactId>log4j</artifactId>
+	    	<version>1.2.16</version>
+	    </dependency>
 	</dependencies>
 	<build>
 		<finalName>pgBlogSys</finalName>
