--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
 		<init-param>
 			<param-name>configClass</param-name>
-			<param-value>com.black.blog.jfinal.common.SubJFinalConfig</param-value>
+			<param-value>com.black.blog.jfinal.config.SubJFinalConfig</param-value>
 		</init-param>
 	</filter>
 
