--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+		
+	    <org.springframework.version>4.3.12.RELEASE</org.springframework.version>
 	</properties>
 
 	<!-- 使用阿里 maven 库 -->
@@ -107,6 +109,23 @@
 	    	<artifactId>log4j</artifactId>
 	    	<version>1.2.16</version>
 	    </dependency>
+		<!-- 添加springframework支持 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
+		    <version>${org.springframework.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context</artifactId>
+		    <version>${org.springframework.version}</version>
+		</dependency>
+		<!-- 添加commons-lang3支持 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>pgBlogSys</finalName>
