--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		
 	    <org.springframework.version>4.3.12.RELEASE</org.springframework.version>
@@ -62,6 +63,12 @@
 	    	<artifactId>mysql-connector-java</artifactId>
 	    	<version>5.1.44</version>
 	    </dependency>
+		<!-- model生成包  -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.29</version>
+		</dependency>
 		<!-- jfinal_s -->
     	<!--
 			此处的 scope 值为 compile 仅为支持 IDEA 下启动项目
